# excel_micro_db

./: .commit_message.tmp  .env.example  .gitignore  LICENSE  README.md  build.py  demo_gui.py  excel_micro_db.code-workspace  gui.py  main.py  main.py.txt  package-lock.json  requirements.txt  run_gui.py  run_gui_check.py  run_new_gui.py  simple_gui.py.bak  test_gui_launch.py
backend/: main.py
backend/analyzer/: README.md  logic_documentation.py
backend/api/: fastapi_server.py
backend/constructor/: README.md  __init__.py  gui_app.py  main_window.py
backend/storage/: base.py  (+5 more)
config/: README.md  settings.yaml.txt
data/: README.md
dev_env/: README.md  requirements-dev.txt  setup_env.bat  setup_env.sh
docs/: README.md  export_spec.md  structure.md
frontend/: index.html  main.cjs  main.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend_bac/: .gitignore  package-lock.json  vite.config.ts
go_exporter/: README.md  go.mod  main.go
gui_flask/: app.py
gui_old/: gui.py
logs/: excel_micro_db.log (2).txt  excel_micro_db.log.txt
output/: README.md
scripts/: README.md  collect_project_files.py  create_test_excel.py  run_integration_test.py  run_integration_test.py.txt
spec/: go_excel_exporter_input_spec.yaml
src/: README.md
templates/: documentation_template.yaml.txt
test_workspace/: .excel_micro_db_project  project_data.db  project_data.db.html
tests/: README.md  check_db_content.py  test_analyzer.py  test_storage.py
(+216 files in other folders)
