[package]
name = "frontend"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] } # Обновлено до последней стабильной, найденной в ошибках

[dependencies]
tauri = { version = "2.4.1", features = [] } # Обновлено до последней стабильной, найденной в ошибках
tauri-plugin-opener = "2.5.0" # Проверить совместимость с 2.4.1, если нет 2.x.y - использовать 2.0.0
serde = { version = "1", features = ["derive"] }
serde_json = "1"
